src/test/deca/syntax/valid/synt/null.deca
// Description:
//    Programme pour tester initialisation null
//
// Resultats:
//    ok
//
// Historique:
//    cree le 01/01/2022
class A{
    int a,b;
}

{
    A x=null;
}