src/test/deca/syntax/invalid/synt/opArith2.deca
// Description:
//    Programme opArithmetique
//
// Resultats:
//      extraneous input '+' expecting {'new', 'null', 'this', 'true', 'false', 'readInt', 'readFloat', '-', '(', '!', INT, FLOAT, STRING, IDENT}
// Historique:
//    cree le 01/01/2022

{
    int a=4-+225;

}
